# ioavpnapps

./: .gitignore  5.txt  PacketTunnel-2026-03-31-170333.ips  PacketTunnel-2026-03-31-174643.ips  PacketTunnel-2026-03-31-181759.ips  README.md  SMVPN  app_v2接口文档.md  build_hot_update_release.ps1  build_release.ps1  flutter_launcher_icons.yaml  geoip.metadb  mihomo内核更新.md  pubspec.yaml  test.yaml  update_server_url.py  优化.md  优化清单.md  优化进度.md  修复进度记录.md  对接文档.md  更改密钥接口.md  说明.md
.github/workflows/: ios-ipa.yml
.trae/rules/: project_rules.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  keys.cpp
ios/: Podfile
ios/PacketTunnel/: Info.plist  PacketTunnel-Bridging-Header.h  PacketTunnel.entitlements  PacketTunnelProvider.swift
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  Runner.entitlements  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
ios_cert/: Clash_Extension_Profile.mobileprovision  Clash_Main_Profile.mobileprovision  dev.p12  new.mobileprovision  new.p12
lib/: main.dart
lib/core/: certificates.dart  constants.dart  logger.dart  utils.dart
lib/services/: api_service.dart  diagnostic_log_service.dart  global_error_reporter.dart  hot_update_service.dart  mihomo_service.dart  tray_service.dart
lib/view_models/: home_view_model.dart
lib/views/: home_page.dart  ios_tunnel_debug_page.dart  splash_page.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+27 files in other folders)
